--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <h1>PLATAFORMA SEMPRE EM ATUALIZAÇÃO, A CADA 24H UMA NOVA PLATAFORMA.</h1>
     </div>
     <div class="button">
-    <a href="#"><button><h3>Ganhe R$100 Agora</h3></button></a></div>
+    <a href="https://136bet.com/?id=72933481&currency=BRL&type=2"><button><h3>Ganhe R$100 Agora</h3></button></a></div>
 
     <div class="text2">
         <h1>SIGA-NOS NO INSTAGRAM.</h1>
     </div>
     <div class="button">
-    <a href="#"><button><h3>Instagram do E7</h3></button></a></div>
+    <a href="https://www.instagram.com/e7gamesoficial/"><button><h3>Instagram do E7</h3></button></a></div>
 </body>
 </html>
